--- a/My Job/Writing/kapitel/kapitel2.tex
+++ b/My Job/Writing/kapitel/kapitel2.tex
@@ -13,12 +13,11 @@ The huge basin of the Ob stretches across a number of natural zones. Semidesert 
 \section{Climate}
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.5\textwidth]{mascon} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
-	\caption{The distribution of 40,962 geodesic grid tiles over the Earth used as a basis function for estimation of mass
-		anomalies from GRACE for CSR mascon solutions. (top) Global view, (bottom left) South Pole view, and (bottom right) North Pole view \cite{save2016high}} 
-	\label{fig:mascon}
+	\includegraphics[width=0.8\textwidth]{climate} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
+	\caption{Asia Map of Koeppen-Geiger climate classification \cite{peel2007updated}} 
+	\label{fig:climate}
 \end{figure}
-The Ob basin has short, warm summers and long, cold winters. Average January temperatures range from  $-28 ^{\circ}$C on the shores of the Kara Sea to $-16 ^{\circ}$C in the upper reaches of the Irtysh. July temperatures for the same locations, respectively, range from 4 $^{\circ}$C to above $20 ^{\circ}$C. The absolute maximum temperature, in the arid south, is $40 ^{\circ}$C,\cite{Obriver} and the minimum, in the Altai Mountains, is $-60 ^{\circ}$. Rainfall, which occurs mainly in the summer, averages less than 400 mm per year in the north, 500 to 600 mm in the taiga zone, and 300 to 400 mm on the steppes. The western slopes of the Altai receive as much as 1 575 mm per year. Snow cover lasts for 240 to 270 days in the north and for 160 to 170 days in the south. It is deepest in the forest zone, where it ranges from 60 to 90 cm, and in the mountains, where it averages 200 cm per year. It is much shallower on the tundra, ranging from 30 to 50 cm, and very thin on the steppe, where 20 to 40 cm fall.\cite{Obriver}\\\\
+According to Koeppen-Gerger climate classification, major part of Ob basin belongs to Subarctic climate(Dfc) \ref{fig:climate} \cite{peel2007updated}. It has short, warm summers and long, cold winters. Average January temperatures range from  $-28 ^{\circ}$C on the shores of the Kara Sea to $-16 ^{\circ}$C in the upper reaches of the Irtysh. July temperatures for the same locations, respectively, range from 4 $^{\circ}$C to above $20 ^{\circ}$C. The absolute maximum temperature, in the arid south, is $40 ^{\circ}$C,\cite{Obriver} and the minimum, in the Altai Mountains, is $-60 ^{\circ}$. Rainfall, which occurs mainly in the summer, averages less than 400 mm per year in the north, 500 to 600 mm in the taiga zone, and 300 to 400 mm on the steppes. The western slopes of the Altai receive as much as 1 575 mm per year. Snow cover lasts for 240 to 270 days in the north and for 160 to 170 days in the south. It is deepest in the forest zone, where it ranges from 60 to 90 cm, and in the mountains, where it averages 200 cm per year. It is much shallower on the tundra, ranging from 30 to 50 cm, and very thin on the steppe, where 20 to 40 cm fall.\cite{Obriver}\\\\
 On the upper Ob the spring floods begin early in April, when the snow on the plains is melting; and they have a second phase, ensuing from the melting of snow on the Altai Mountains. The middle Ob, scarcely affected by the upper Ob's phases, has one continuous spring-summer period of high water, which begins in mid April. For the lower Ob, high water begins in late April or early May. Levels, in fact, begin to rise when the watercourse is still obstructed by ice; and maximum levels, which occur by May on the upper Ob, may not be reached until June, July, or even August on the lower reaches. For the upper Ob, the spring floods end by July, but autumn rains bring high water again in September and October; in the middle and lower Ob, the spring and summer floodwaters gradually recede until freezing sets in. On the lower reaches, flooding may last four months. Flooding of the Ob proper and of the Irtysh obstructs the minor tributaries' drainage.
 \section{Hydrology}
 The Ob has the third greatest discharge of Siberia's rivers, after the Yenisey and the Lena. On average, it pours some 400 cubic km of water annually into the Arctic Ocean about 12\% of that ocean's total intake from drainage.\\\\
