--- a/My Job/Writing/kapitel/kapitel3.tex
+++ b/My Job/Writing/kapitel/kapitel3.tex
@@ -209,13 +209,20 @@ Runoff is quantity of water discharged in surface streams. Runoff includes not o
 The in-situ run off data are from Global Runoff Data Center (GRDC). The GRDC is an international archive of data up to 200 years old, and fosters multinational and global long-term hydrological studies. Originally established three decades ago, the aim of the GRDC is to help earth scientists analyse global climate trends and assess environmental impacts and risks. Operating under the auspices of WMO the database of quality controlled "historical" mean daily and monthly discharge data grows steadily and currently comprises river discharge data of more than 9,900 stations from 159 countries.\\\\
 However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evapotranspiration, models from different data centers play a role. The datasets (\autoref{tab:runoff}), which fit the in-situ discharge the best, are chosen while others are denied. The chosen data will then be processed. But it is shown later, that not all these datasets are good enough. In addition to those hydrological models, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\autoref{fig:Salekhard}) is known. 
 \begin{table}[htbp]\centering
-	\begin{tabular}{lllll}
-		&                                     &                                          &                                         &                                       \\ \hline
-		\multicolumn{1}{|l|}{Dataset}    & \multicolumn{1}{l|}{Timespan}       & \multicolumn{1}{l|}{Temporal Resolution} & \multicolumn{1}{l|}{Spatial Resolution} & \multicolumn{1}{l|}{Spatial Coverage} \\ \hline
-		\multicolumn{1}{|l|}{GLDAS NOAH} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times  0.25^{\circ}$}        & \multicolumn{1}{l|}{$60^{\circ}S - 90^{\circ}N$}      \\ \hline
-		\multicolumn{1}{|l|}{GLDAS CLSM} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}        & \multicolumn{1}{l|}{$60^{\circ}S - 90^{\circ}N$}      \\ \hline
-		\multicolumn{1}{|l|}{GLDAS VIC}  & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}        & \multicolumn{1}{l|}{$60^{\circ}S - 90^{\circ}N$}      \\   \hline
-		\multicolumn{1}{|l|}{ERA5}       & \multicolumn{1}{l|}{1979 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$31\ut{km} \times 31\ut{km}$}            & \multicolumn{1}{l|}{Global}           \\ \hline
+	\begin{tabular}{llll}
+		&                                     &                                          &                                                                                \\ \hline
+		\multicolumn{1}{|l|}{Dataset}    & \multicolumn{1}{l|}{Timespan}       & \multicolumn{1}{l|}{Temporal Resolution} & \multicolumn{1}{l|}{Spatial Resolution}  \\ \hline
+		\multicolumn{1}{|l|}{GLDAS NOAH} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times  0.25^{\circ}$}             \\ \hline
+		\multicolumn{1}{|l|}{GLDAS CLSM} & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}             \\ \hline
+		\multicolumn{1}{|l|}{GLDAS VIC}  & \multicolumn{1}{l|}{1948 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}              \\   \hline
+		\multicolumn{1}{|l|}{ERA5}       & \multicolumn{1}{l|}{1979 - present} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$31\ut{km} \times 31\ut{km}$}                      \\ \hline
+		\multicolumn{1}{|l|}{HTESSEL}       & \multicolumn{1}{l|}{1979 - 2012} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}                     \\ \hline
+		\multicolumn{1}{|l|}{LISFLOOD}       & \multicolumn{1}{l|}{1980 - 2011} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}                    \\ \hline
+		\multicolumn{1}{|l|}{ORCHIDEE}       & \multicolumn{1}{l|}{1980 - 2014} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}                      \\ \hline
+		\multicolumn{1}{|l|}{PCR-GLOBWB}       & \multicolumn{1}{l|}{1979 - 2012} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.5^{\circ} \times 0.5^{\circ}$}                      \\ \hline
+		\multicolumn{1}{|l|}{SURFEX}       & \multicolumn{1}{l|}{1980 - 2014} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}                     \\ \hline
+		\multicolumn{1}{|l|}{W3RA}       & \multicolumn{1}{l|}{1979 - 2012} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.5^{\circ} \times 0.5^{\circ}$}                      \\ \hline
+		\multicolumn{1}{|l|}{WaterGAP3}       & \multicolumn{1}{l|}{1980 - 2014} & \multicolumn{1}{l|}{Monthly}             & \multicolumn{1}{l|}{$0.25^{\circ} \times 0.25^{\circ}$}                       \\ \hline
 	\end{tabular}
 	\caption{runoff datasets}
 	\label{tab:runoff}
@@ -233,7 +240,7 @@ However, the discharge data from GRDC of Ob river are only up to 2010, which doe
  \paragraph{Envisat}
 Envisat (Environmental Satellite) is a large inactive Earth-observing satellite which is still in orbit. Operated by the European Space Agency (ESA), it was the world's largest civilian Earth observation satellite. It was launched on 1 March 2002 aboard an Ariane 5 from the Guyana Space Centre in Kourou, French Guiana, into a Sun synchronous polar orbit at an altitude of $790\pm10$ km. It orbits the Earth in about 101 minutes, with a repeat cycle of 35 days. After losing contact with the satellite on 8 April 2012, ESA formally announced the end of Envisat's mission on 9 May 2012.\\\\
 In working towards the global and regional objectives of the mission, numerous scientific disciplines currently use the data acquired from the different sensors on the satellite to study such things as atmospheric chemistry, ozone depletion, biological oceanography, ocean temperature and colour, wind waves, hydrology (humidity, floods), agriculture and arboriculture, natural hazards, digital elevation modelling (using interferometry), monitoring of maritime traffic, atmospheric dispersion modelling (pollution), cartography and study of snow and ice.
-\paragraph{Saral}
+\paragraph{SARAL}
 SARAL (Satellite with ARgos and ALtiKa) is a cooperative altimetry technology mission of Indian Space Research Organisation (ISRO) and CNES (Space Agency of France). SARAL performs altimetric measurements designed to study ocean circulation and sea surface elevation. The payloads of SARAL are The ISRO built satellite with payloads modules (ALTIKA altimeter), DORIS, Laser Retro-reflector Array (LRA) and ARGOS-3 (Advanced Research and Global Observation Satellite) data collection system provided by CNES was launched by Indian Polar Satellite Launch Vehicle rocket into the Sun-synchronous orbit (SSO). SARAL was successfully launched on 25 February 2013. It will fill the gap between Envisat and the Sentinel 3 mission of the European GMES program.
 \paragraph{Sentinel-3}
 Sentinel-3 is an Earth observation satellite constellation developed by the European Space Agency as part of the Copernicus Programme. The Sentinel-3 mission's main objective is to measure sea-surface topography, sea- and land-surface temperature and ocean- and land-surface colour with accuracy in support of ocean forecasting systems, and for environmental and climate monitoring. Sentinel-3 builds directly on the heritage pioneered by ERS-2 and Envisat satellites. Near-real time data will be provided for ocean forecasting, sea-ice charting, and maritime safety services on the state of the ocean surface, including surface temperature, marine ecosystems, water quality and pollution monitoring. The satellite orbit provides a 27-day repeat for the topography package, with a 4-day sub-cycle.
