--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -186,3 +186,9 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	year={2018},
 	publisher={Nature Publishing Group}
 }
+
+@article{peel2007updated,
+	title={Updated world map of the K{\"o}ppen-Geiger climate classification},
+	author={Peel, Murray C and Finlayson, Brian L and McMahon, Thomas A},
+	year={2007}
+}
